Armitage Changelog
==================

In Progress
---------
- Shell -> Disconnect now executes in a separate thread.

12 Mar 11 (MACCDC Post Day 1 Update)
---------
- Fixed a bug preventing host import from working with a remote connection
- Armitage client now increases default wait for meterpreter commands to
  complete when in teaming mode.
- Increased wait time to download a generated payload file to 8s.

11 Mar 11 Update (0100h EST)
---------
- Fixed a deadlock condition in the module launcher (caused by the changes
  to increase responsiveness... oops).

10 Mar 11 Update (2230h EST)
---------
- Fixed race condition importing manual list of hosts (sometimes the file
  would get deleted). Grr.
- Added a lock to prevent multiple Armitage clients from trying to 
  determine what OS a box has. This should help in CTF situations.

10 Mar 11 Changes
---------

Quick story: NECCDC 2011 Red Team. TJ launches a script that lands 70
sessions in the first few seconds. 11 red team members are connected to
Armitage eager to carry out their pieces of pwnage. The Ruby process pegs
the CPU and Armitage fails spectacularly. Very funny. This releases fixes
that. 

- Armitage YAML parser now accepts quoted strings in the YAML fields
- Added caching of sessions.list, db.hosts, and db.services to Armitage 
  collaboration server. This should help prevent msfrpcd from overloading
  when many clients are connected and owning boxen at one time.
- Improved GUI responsiveness by making several parts of the Armitage GUI
  spawn a new thread to avoid blocking while communicating with Metasploit
- Added a tooltip to the "Start MSF" and "Connect" buttons to clarify use
- Export credentials button now prompts for a remote file when connected 
  to a remote Metasploit instance.
- Export credentials and payload generate output now transparently  
  downloads to your local host when connected to Armitage's collab server.
- Armitage now loads stdapi in Meterpreter if it finds it's not loaded. 